syntax = "proto3";

package storage_engine;

/*
    Defines the gRPC service interface
    Contains message structures for communication
    Defines StorageEngine service with ProcessMessage RPC
*/

// Message definition
message Message {
    string id = 1;
    string content = 2;
    int64 timestamp = 3;
}

// Response for message processing
message ProcessResponse {
    bool success = 1;
    string message = 2;
}

// Storage Engine service
service StorageEngine {
    rpc ProcessMessage(Message) returns (ProcessResponse);
}
